force-app/main/default/objects/Sales_Rep_Visit__c/Sales_Rep_Visit__c.object-meta.xml
<CustomObject>
    <label>Sales Rep Visit</label>
    <nameField>
        <displayFormat>SRV-{00000}</displayFormat>
        <label>Sales Rep  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>