force-app/main/default/objects/Sales_Rep_Visit__c/fields/CheckIn_Time__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Time__c</fullName>
    <label>CheckIn Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>