force-app/main/default/objects/Sales_Rep_Visit__c/fields/Contact__c.field-meta.xml
<CustomField>
   <!-- <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Rep Visits</relationshipLabel>
    <relationshipName>Sales_Rep_Visits</relationshipName>
    <type>Lookup</type>-->
</CustomField>