force-app/main/default/objects/Sales_Rep_Visit__c/fields/GeoLocation_Verification__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation_Verification__c</fullName>
    <formula>IF(
ISPICKVAL(Location__c, &quot;Matched&quot;), IMAGE(&quot;/resource/1599571872000/green?&quot;,&quot;Green&quot;,30,30),
IF(
ISPICKVAL(Location__c, &quot;Unmatched&quot;), IMAGE(&quot;/resource/1599571542000/Red?&quot;, &quot;Yellow&quot;,30,30),
IMAGE(&quot;img/samples/s.gif&quot;,&quot;Img&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GeoLocation Verification</label>
    <type>Text</type>
</CustomField>