force-app/main/default/objects/Sales_Rep_Visit__c/fields/Total_Visit_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Visit_Expenses__c</fullName>
    <label>Total Visit Expenses</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Sales_Rep_Visit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>