force-app/main/default/objects/Sales_Rep_Visit__c/fields/Visited_Date__c.field-meta.xml
<CustomField>
    <fullName>Visited_Date__c</fullName>
    <label>Visited Date</label>
    <type>Date</type>
</CustomField>